--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "proxy",
     "heroku"
   ],
-  "main": "./lib/cors-anywhere.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "files": [
     "lib/",
     "test/",
